font size decreased to help layout issues

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -25,7 +25,7 @@ main {
 body {
 	background: $footerbg;
 	font-family: Arial;
-	font-size: 18px;
+	font-size: 16px;
 	margin: 0;
 	padding: 0;
 	line-height: 1.5em;
